JavaProject/src/info3/parser/javacc/projet/langageC/test/pass/a03.c
ALGORITHM(a03){
  int x;
  int y;
  x=y+1;
  return x;
}