JavaProject/src/info3/parser/javacc/projet/langageC/test/fail/test10.c
ALGORITHM(test10){
	ca_marche == pas;
}
